Day 01 Java Core PR correction