@@ -1,5 +1,6 @@
-package main.java;
+package com.baldhokade.reboot.day01;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -12,7 +13,7 @@ public class TransactionDemo {
         Transaction txn4 = new Transaction("004", "credit", 3520.80, "INR");
         Transaction txn5 = new Transaction("005", "debit", 1150.80, "INR");
 
-        Map<String, Double> totalAmtByType = TransactionUtil.getTotalAmtPerType(List.of(txn1,txn2,txn3,txn4,txn5));
+        Map<String, Double> totalAmtByType = TransactionUtil.getTotalAmtPerType(Arrays.asList(txn1,txn2,txn3,txn4,txn5));
 
         totalAmtByType.forEach((key, value) -> System.out.printf("%s -> %.2f\n", key, value));
     }
